--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -56,7 +56,7 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-//				events.preLoad('index.html');
+				//				events.preLoad('index.html');
 				var regFlag;
 				window.addEventListener('yanzhengma', function(event) {
 					var temp = event.detail.data;
@@ -67,56 +67,40 @@
 				});
 				console.log('regFlag=' + regFlag);
 				events.addTap('register', function() {
-					//对账号加密
-					var encryptNumb = RSAEncrypt.enctype(document.getElementById("phoneNumber").value);
-					//对验证码加密
-					var encryptCode = RSAEncrypt.enctype(document.getElementById("yanzheng").value);
-					//拼接需要的签名
-					var signTemp = sortUrls.sortIt(['uuid=' + plus.device.uuid, 'shaketype=reg', 'appid=' + plus.runtime.appid, 'uid=' + encryptNumb, 'code=' + encryptCode]);
-					//生成签名，返回值sign则为签名
-					signHmacSHA1.sign(signTemp, storageKeyName.SIGNKEY, function(sign) {
-						//组装发送握手协议需要的data
-						var tempData = {
-							uuid: plus.device.uuid,
-							shaketype: 'reg',
-
-							appid: plus.runtime.appid,
-							uid: encryptNumb,
-							code: encryptCode,
-							sign: sign
-						};
-						// 等待的对话框
-						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-						//判断是注册0，还是验证码模式登录1
-						if(regFlag == 0) { //注册0
-							console.log('zhuce---sign:'+sign);
-							//发送注册协议
-							postData(storageKeyName.MAINURL + 'PostReg', tempData, function(data) {
-								//成功，关闭等待框
-								wd.close();
-								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-								//存储到手机本地
-								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
-//								events.fireToPage('index.html', 'yanzhengma', function() {
-//									return 0;
-//								});
-							}, wd);
-						} else { //验证码模式登录1
-							console.log('yanzhengma denglu');
-							//发送验证码登录协议
-							postData(storageKeyName.MAINURL + 'PostCodeLogin', tempData, function(data) {
-								//成功，关闭等待框
-								wd.close();
-								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-								//存储到手机本地
-								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
-//								events.fireToPage('index.html', 'yanzhengma', function() {
-//									return 0;
-//								});
-							}, wd);
->>>>>>> branch 'master' of https://github.com/JinShiYe/JiaoBaoYun-hb.git
-						}
-					});
+					//需要加密的数据
+					var enData = {
+						uid: document.getElementById("phoneNumber").value,
+						code: document.getElementById("yanzheng").value
+					};
+					//不需要加密的数据
+					var comData = {
+						uuid: plus.device.uuid,
+						shaketype: 'reg',
+						appid: plus.runtime.appid
+					};
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					//判断是注册0，还是验证码模式登录1
+					if(regFlag == 0) { //注册0
+						//发送网络请求，data为网络返回值
+						postDataEncry(storageKeyName.MAINURL + 'PostReg', enData, comData, wd, function(data) {
+							//成功，关闭等待框
+							wd.close();
+							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							//存储到手机本地
+							window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
+						});
+					} else { //验证码模式登录1
+						console.log('yanzhengma denglu');
+						//发送网络请求，data为网络返回值
+						postDataEncry(storageKeyName.MAINURL + 'PostCodeLogin', enData, comData, wd, function(data) {
+							//成功，关闭等待框
+							wd.close();
+							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							//存储到手机本地
+							window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
+						});
+					}
 				});
 			});
 		</script>
