--- a/JiaoBaoYun-hb/html/homework/homework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/homework-stu.html
@@ -1,3 +1,7 @@
+<!--作业 学生主界面-->
+<!--
+	@anthor an
+-->
 <!doctype html>
 <html>
 
@@ -6,8 +10,11 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<!--共用样式表-->
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<!--alibaba字库-->
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<!--本页面应用样式表-->
 		<link href="../../css/homework/homework.css" rel="stylesheet" />
 	</head>
 
@@ -15,17 +22,22 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">作业</h1>
-		   	<a class="mui-icon  mui-icon-bars mui-pull-right"></a>
-		    <ul class="sub-nav">
-		    	  <li><a class="mui-icon iconfont icon-shubendisc" href=""></a>错题本</li>
-		    	  <li><a class="mui-icon iconfont icon-shezhi1" href=""></a>作业记录</li>
-	    	</ul>
+		    <!--更多按钮-->
+		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right"></a>
+		   	<!--拍照按钮-->
 		    <a class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
+		<!--公用事件库-->
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			events.initSubPage('homework-stu-sub.html')
+			//加载子页面
+			events.initSubPage('homework-stu-sub.html');
+			//更多按钮点击监听事件
+			events.addTap('more',function(){
+				//向子页面传递事件
+				events.fireToPageNone('homework-stu-sub.html','togglePop');
+			})
 		</script>
 	</body>
 
