--- a/JiaoBaoYun-hb/html/homework/homework-stu-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-stu-sub.html
@@ -25,6 +25,7 @@
 			    </ul>
 	    	</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
 			mui.init()
 			mui.plusReady(function(){
