--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -15,6 +15,9 @@
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>
+		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
+		<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>
 		<style>
 			.cloud-color {
 				/*图标颜色*/
@@ -68,40 +71,32 @@
 			path.push('云盘—云存储');
 			//显示等待窗口
 			plus.nativeUI.showWaiting('正在加载中');
-			//上传，下载，增加文件夹的监听
-			mui('.mui-content').on('tap', 'img', function(e) {
-				var id = this.getAttribute('id');
-				switch(id) {
-					case 'upload': //上传
-						mui.toast('upload');
-						break;
-					case 'download': //下载
-						mui.toast('download');
-						break;
-					case 'add': //新建文件夹
-						e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
-						var btnArray = ['取消', '确定'];
-						mui.prompt('请输入新文件夹的名称：', '新文件夹', '新建文件夹', btnArray, function(e) {
-							if(e.index == 1) {
-								//点击确定
-								console.log(e.value);
-								if(e.value == '') {
-									mui.toast('文件夹名字不能为空');
-								} else {
-									//向服务器发送数据并获得成功的回调
-									//新建文件夹
-									var tab = plus.webview.getWebviewById('storage_sub.html');
-									mui.fire(tab, "addFolder", {
-										folderName: e.value,
-										folderUrl: 'newFloder'
-									});
-								}
-							} else {
-								//点击取消
-							}
-						});
-						break;
-				}
+			//下载，增加文件夹的监听
+			document.getElementById('download').addEventListener('tap', function() {
+				mui.toast('download');
+			});
+			document.getElementById('add').addEventListener('tap', function() {
+				e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
+				var btnArray = ['取消', '确定'];
+				mui.prompt('请输入新文件夹的名称：', '新文件夹', '新建文件夹', btnArray, function(e) {
+					if(e.index == 1) {
+						//点击确定
+						console.log(e.value);
+						if(e.value == '') {
+							mui.toast('文件夹名字不能为空');
+						} else {
+							//向服务器发送数据并获得成功的回调
+							//新建文件夹
+							var tab = plus.webview.getWebviewById('storage_sub.html');
+							mui.fire(tab, "addFolder", {
+								folderName: e.value,
+								folderUrl: 'newFloder'
+							});
+						}
+					} else {
+						//点击取消
+					}
+				});
 			});
 
 			//返回上一级
@@ -128,6 +123,39 @@
 				var title = document.body.querySelector('.mui-title');
 				title.innerHTML = getPath;
 			});
+
+			var pickButtonId = 'upload';
+			var getUpTokenUrl = 'http://192.168.0.178:8507/QiuToken.ashx';
+			var getUpTokenData = {};
+			var domain = 'http://o9u2jsxjm.bkt.clouddn.com/';
+			var filePath = '/A/A/云盘/';
+			var auto = true;
+			//设置上传的参数
+			var options = QiNiuUtil.UpOption(pickButtonId, getUpTokenUrl, getUpTokenData, domain, filePath, auto);
+			//console.log("options" + JSON.stringify(options));
+
+			var uploader = Qiniu.uploader(options);
+			//绑定上传的时的方法
+			uploader.bind('UploadProgress', function(up, file) {
+				// 每个文件上传时，处理相关的事情
+				console.log('文件上传时：' + JSON.stringify(file));
+				console.log('上传进度：' + file.percent);
+			});
+			//绑定上传成功的方法
+			uploader.bind('FileUploaded', function(up, file, info) {
+				console.log('---上传成功---');
+				console.log('file:' + JSON.stringify(file));
+				console.log('info:' + JSON.stringify(info));
+				mui.toast('上传成功');
+			});
+			//绑定上传出错的方法
+			uploader.bind('Error', function(up, err, errTip) {
+				//上传出错时，处理相关的事情
+				console.log('---上传出错---');
+				console.log('err' + JSON.stringify(err));
+				console.log('errTip' + JSON.stringify(errTip));
+			});
+
 		})
 	</script>
 
