--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -89,6 +89,9 @@
 							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							//存储到手机本地
 							window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
+							//跳转到主界面
+							var temp;
+							events.openNewWindowWithData('../../html/index.html',temp);
 						});
 					} else { //验证码模式登录1
 						console.log('yanzhengma denglu');
@@ -99,6 +102,9 @@
 							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							//存储到手机本地
 							window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
+							//跳转到主界面
+							var temp;
+							events.openNewWindowWithData('../../html/index.html',temp);
 						});
 					}
 				});
