添加jquery文件，华为手机问题

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -148,8 +148,6 @@
 		<!--加密-->
 		<script src="../../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/libs/RSA/jQuery.md5.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/libs/RSA/MD5.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
 		<!---->
@@ -160,10 +158,11 @@
 		<script src="../../js/libs/crypto-js/require.js"></script>
 		<script src="../../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>
 
 		<script>
 			(function($, doc) {
-				$.init({
+				mui.init({
 					statusBarBackground: '#f7f7f7'
 				});
 //				events.preLoad('register_phoneNumber.html');
