解决侧滑菜单显示注册界面的bug

--- a/JiaoBaoYun-hb/html/index-menu.html
+++ b/JiaoBaoYun-hb/html/index-menu.html
@@ -69,93 +69,26 @@
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
-		//根据不同的手机，设置不同动画
-			var aniShow = "slide-in-right";
-			//关于backbutton和menubutton两个按键的说明，在iOS平台不存在，故需隐藏
-			if(!mui.os.android){
-				//获取安卓系统的两个按钮
-				var span = document.getElementById("android-only");
-				if(span){
-					span.style.display = "none";
+			mui.init({
+				keyEventBind: {
+					backbutton: false,
+					menubutton: false
 				}
-				//动画
-				aniShow = "pop-in";
-			}
-			//
-			var subWebview=null,template=null,index=null;
+			});
+			//获得侧滑主窗口webview对象
+			var main = null;
 			mui.plusReady(function () {
-				//获得主页面webview引用；
-				index = plus.webview.currentWebview().opener();
+				main = plus.webview.currentWebview().opener();
 			})
-			mui('.mui-table-view').on('tap', 'a', function() {
-				var id = this.getAttribute("href");
-				var type = this.getAttribute("open-type");
-				var href = this.href;
-				if(type=="common"||mui.os.ios){
-					var webview_style = {
-						popGesture: "close"
-					};
-					mui.openWindow({
-						id: id,
-						url: href,
-						styles: webview_style,
-						show: {
-							aniShow: aniShow
-						},
-						waiting: {
-							autoShow: false
-						}
-					});
-				}else{
-					var href = this.href;
-					var title = this.innerText;
-					//获取共用父窗体
-					template = plus.webview.getWebviewById("default-main");
-					//获得共用子webview
-					subWebview = template.children()[0];
-					
-					//通知模板修改标题，并显示隐藏右上角图标；
-					mui.fire(template,'updateHeader',{title:title,showMenu:false});
-					if (subWebview.getURL() != href) {
-						subWebview.loadURL(href);
-					} else {
-						 subWebview.show();
-					}
-					template.show('slide-in-right', 150);
-				}
-			});
-			
-			/**
-			 * 关闭侧滑菜单
-			 */
-			function close() {
-				mui.fire(mui.currentWebview.opener(),"menu:close",{
-					isShow:true
-				});
+			function closeMenu () {
+				mui.fire(main,"menu:close");
 			}
-			
-			//点击“关闭侧滑菜单”按钮处理逻辑
-//			document.getElementById("close-btn").addEventListener("tap",close);
-			
-			//在android4.4.2中的swipe事件，需要preventDefault一下，否则触发不正常
-			window.addEventListener('dragstart',function(e){
-				mui.gestures.touch.lockDirection = true; //锁定方向
-				mui.gestures.touch.startDirection = e.detail.direction;
-			});
-			window.addEventListener('dragleft', function(e) {
-				if(!mui.isScrolling){
-					//preventDefault，该方法将通知 Web 浏览器不要执行与事件关联的默认动作(如果存在这样的动作)
-					e.detail.gesture.preventDefault();	
-				}
-			});
-			//监听左滑事件，若菜单已展开，左滑要关闭菜单；
-			window.addEventListener("swipeleft",function (e) {
-				console.log(e.detail.angle);
-				//界面从最左侧滑动到右侧的距离
-				if(Math.abs(e.detail.angle)>170){
-					close();						
-				}
-			});
+			//优化显示出来的侧滑菜单，只需监听该菜单的左滑事件，然后将其关闭即可；在菜单上右滑，不做任何操作；
+			window.addEventListener("swipeleft",closeMenu);  
+			//android菜单按钮
+			mui.menu = closeMenu;
+			//android系统返回键
+			mui.back=closeMenu;
 		</script>
 	</body>
 
