注册登录加输入条件 家校圈加加下拉刷新

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -239,6 +239,14 @@
 					var moreButton = doc.getElementById('more');
 					//登录按钮
 					loginButton.addEventListener('tap', function(event) {
+						if(!accountBox.value){
+							mui.toast('请输入账号')
+							return;
+						}
+						if(!passwordBox.value){
+							mui.toast('请输入密码')
+							return;
+						}
 						var loginInfo = {
 							account: accountBox.value,
 							password: passwordBox.value
@@ -262,6 +270,13 @@
 						postDataEncry(storageKeyName.MAINURL + 'PostLogin', enData, comData, wd, function(data) {
 							wd.close();
 							console.log('111111190909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							if(data.RspCode !=0000)
+							{
+								mui.toast(data.RspTxt);
+								return;
+							}else{
+								mui.toast(data.RspTxt);
+							}
 							//存储到手机本地
 							window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 							toMain();
