--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -22,11 +22,11 @@
 				</div>-->
 				<div class="mui-input-row">
 					<label>新密码</label>
-					<input type="text" id="password0" placeholder="请输入新密码 ">
+					<input type="password" id="password0" placeholder="请输入新密码 ">
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
-					<input type="text" id="password1" placeholder="重新输入新密码 ">
+					<input type="password" id="password1" placeholder="重新输入新密码 ">
 				</div>
 			</form>
 			<div class="mui-content-padded">
