--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -20,7 +20,7 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>手机号</label>
-					<!--<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly">-->
+					<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly">
 					<input type="text" id="phoneNumber" placeholder="请输入手机号">
 				</div>
 				<div class="mui-input-row">
